move jcr html pages into the right place
git-svn-id: https://svn.apache.org/repos/asf/incubator/graffito/trunk/jcr/jcr-mapping@374151 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -25,7 +25,7 @@ maven.license.licenseFile=../../LICENSE.TXT
 #-----------------------------------------------------------------------------------------------------
 # DOC : SITE & PDF DOC
 #-----------------------------------------------------------------------------------------------------
-maven.docs.dest=${basedir}/../../site/jcr-mapping
+maven.docs.dest=${basedir}/../../../site/jcr-mapping
 
 # Display the date on the Maven web site
 maven.xdoc.date = left
