Drop Graffito references
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk/contrib/jackrabbit-jcr-mapping/jcr-mapping@537651 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/log4j.properties
+++ b/src/test/log4j.properties
@@ -23,10 +23,10 @@
 #
 # ------------------------------------------------------------------------
 
-log4j.rootLogger = WARN, console
+log4j.rootLogger = ERROR, console
 
-log4j.category.org.apache.portals.graffito.jcr= DEBUG, console
-log4j.additivity.org.apache.portals.graffito.jcr=false
+log4j.category.org.apache.jackrabbit.ocm= WARN, console
+log4j.additivity.org.apache.jackrabbit.ocm=false
 
 #
 # Console
