* Review the interface AtomicTypeConverter : rename the method getString into getXPathQueryValue. This method is mainly used by FiterImpl in order to build Xpath query expression based on the object attribute. * Solve issue JCR-930 : now dates are not converted in long if UtilDateConverterImpl is used.
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk/contrib/jackrabbit-jcr-mapping/jcr-mapping@544959 13f79535-47bb-0310-9956-ffa450edef68

--- a/.project
+++ b/.project
@@ -1,15 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
 <projectDescription>
-  <name>graffito-jcr-mapping</name>
-  <comment>This subproject contains the JCR Mapping tools</comment>
-  <projects>
-  </projects>
+  <name>jackrabbit-ocm</name>
+  <comment>This Jackrabbit subproject is an object/JCR persistence and query service. This tools lets you to persist java objects into a JCR compliant repository - including association, inheritance, polymorphism, composition, and the Java collections framework. Furthermore, this jcr-mapping allows you to express queries in Java-based Criteria, as well as in JCR query language. It offers also features like version support and object locking.</comment>
+  <projects/>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
-      <arguments>
-      </arguments>
     </buildCommand>
   </buildSpec>
   <natures>
