misspelling in the name
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk/contrib/jackrabbit-jcr-mapping/jcr-mapping@551677 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <groupId>org.apache.jackrabbit</groupId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <name>Jackrabbit Object Content Maping</name>
+  <name>Jackrabbit Object Content Mapping</name>
   <description>This Jackrabbit subproject is an object/JCR persistence and query service. This tools lets you to persist java objects into a JCR compliant repository - including association, inheritance, polymorphism, composition, and the Java collections framework. Furthermore, this jcr-mapping allows you to express queries in Java-based Criteria, as well as in JCR query language. It offers also features like version support and object locking.</description>
   <inceptionYear>2007</inceptionYear>
 
