--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,21 @@
   <inceptionYear>2007</inceptionYear>
 
   <!-- ====================================================================== -->
+  <!-- B U I L D                                                              -->
+  <!-- ====================================================================== -->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx256m</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <!-- ====================================================================== -->
   <!-- D E P E N D E N C I E S                                                -->
   <!-- ====================================================================== -->
   <dependencies>
