--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
   <!-- ====================================================================== -->
   <build>
     <plugins>
+	<plugin>
+	   <inherited>true</inherited>
+	    <artifactId>maven-compiler-plugin</artifactId>
+	    <configuration>
+		    <target>1.5</target>
+		    <source>1.5</source>
+	    </configuration>
+      </plugin>	    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
