jcr-1144 Investigate ways to compile the refactored jcr-mapping for Java 1.4
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk/contrib/jackrabbit-jcr-mapping/jcr-mapping@579970 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,35 @@
 	</build>
 
 	<!-- ====================================================================== -->
+	<!-- P R O F I L E S                                                        -->
+	<!-- ====================================================================== -->
+    <profiles>
+        <profile>
+            <id>jdk1.4</id>
+            <build>
+                <finalName>
+                    ${artifactId}-jdk1.4
+                </finalName>
+                <plugins>
+                    <plugin>
+                        <inherited>true</inherited>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>
+                                    org/apache/jackrabbit/ocm/mapper/impl/annotation/**
+                                </exclude>
+                            </excludes>
+                            <target>1.4</target>
+                            <source>1.4</source>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+	<!-- ====================================================================== -->
 	<!-- D E P E N D E N C I E S                                                -->
 	<!-- ====================================================================== -->
 	<dependencies>
