change log level
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk/contrib/jackrabbit-jcr-mapping/jcr-mapping@584177 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -25,7 +25,7 @@
 
 log4j.rootLogger = ERROR, console
 
-log4j.category.org.apache.jackrabbit.ocm= DEBUG, console
+log4j.category.org.apache.jackrabbit.ocm= WARN, console
 log4j.additivity.org.apache.jackrabbit.ocm=false
 
 #
