JCR-1404: javadoc writing and generation with mvn
Applied improvement suggested by Alex Lukin.


git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk/jackrabbit-ocm@691315 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
         </configuration>
       </plugin>
       <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>-Xmx256m</argLine>
