--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>retrotranslator-maven-plugin</artifactId>
+        <version>1.0-alpha-4</version>
         <executions>
           <execution>
             <goals>
