--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
   <!-- ====================================================================== -->
   <parent>
     <groupId>org.apache.jackrabbit</groupId>
-    <artifactId>jackrabbit</artifactId>
+    <artifactId>jackrabbit-parent</artifactId>
     <version>1.6-SNAPSHOT</version>
+    <relativePath>../jackrabbit-parent/pom.xml</relativePath>
   </parent>
   <artifactId>jackrabbit-ocm</artifactId>
   <name>Jackrabbit Object Content Mapping</name>
@@ -121,6 +122,7 @@
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
