--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
-      <version>${project.version}</version>
+      <version>1.6-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
