--- a/pom.xml
+++ b/pom.xml
@@ -133,13 +133,14 @@
       <version>1.7.0</version>
     </dependency>
 
-    <!-- Test -->
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
       <version>1.5.5</version>
-      <scope>test</scope>
+      <optional>true</optional>
     </dependency>
+
+    <!-- Test -->
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
