--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,12 @@
   <parent>
     <groupId>org.apache.jackrabbit</groupId>
     <artifactId>parent</artifactId>
-    <version>3</version>
+    <version>5</version>
   </parent>
 
   <artifactId>jackrabbit-ocm</artifactId>
-  <version>1.6-SNAPSHOT</version>
-  <name>Jackrabbit Object Content Mapping</name>
+  <version>2.0-SNAPSHOT</version>
+  <name>Jackrabbit Object Content Mapping 2.x</name>
   <description>
     This Jackrabbit subproject is an object/JCR persistence and
     query service. This tools lets you to persist java objects into
@@ -50,10 +50,12 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <target>1.5</target>
-          <source>1.5</source>
+          <target>1.6</target>
+          <source>1.6</source>
+          <showDeprecation>true</showDeprecation>
         </configuration>
       </plugin>
+<!--
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
@@ -111,7 +113,8 @@
             <version>1.5.3-1</version>
           </dependency>
         </dependencies>
-      </plugin>	  
+      </plugin>
+-->
     </plugins>
   </build>
 
@@ -122,7 +125,7 @@
     <dependency>
       <groupId>javax.jcr</groupId>
       <artifactId>jcr</artifactId>
-      <version>1.0</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>commons-digester</groupId>
@@ -149,7 +152,7 @@
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
-      <version>2.1_3</version>
+      <version>2.2</version>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
@@ -160,15 +163,15 @@
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
-      <version>1.5.5</version>
+      <version>2.1.1</version>
       <optional>true</optional>
     </dependency>
 
     <!-- Test -->
     <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
-      <version>1.0.1</version>
+      <groupId>geronimo-spec</groupId>
+      <artifactId>geronimo-spec-jta</artifactId>
+      <version>1.0-M1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -181,6 +184,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.9.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
