--- a/pom.xml
+++ b/pom.xml
@@ -55,66 +55,19 @@
           <showDeprecation>true</showDeprecation>
         </configuration>
       </plugin>
-<!--
+
       <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>-Xmx256m</argLine>
-          <systemProperties>
-            <property>
-              <name>derby.system.durability</name>
-              <value>test</value>
-            </property>
-            <property>
-              <name>derby.stream.error.file</name>
-              <value>target/derby.log</value>
-            </property>
-          </systemProperties>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>retrotranslator-maven-plugin</artifactId>
-        <version>1.0-alpha-4</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
         <executions>
           <execution>
+            <id>attach-sources</id>
             <goals>
-              <goal>translate-project</goal>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>process-test-resources</id>
-            <phase>process-test-resources</phase>
-            <configuration>
-              <tasks>
-				<delete dir="${project.build.directory}/nodemanagement-repository"/>
-              </tasks>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>ant</groupId>
-            <artifactId>ant-optional</artifactId>
-            <version>1.5.3-1</version>
-          </dependency>
-        </dependencies>
-      </plugin>
--->
     </plugins>
   </build>
 
@@ -163,7 +116,7 @@
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
-      <version>2.1.1</version>
+      <version>2.2.9</version>
       <optional>true</optional>
     </dependency>
 
