--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,36 @@
   <!-- B U I L D                                                              -->
   <!-- ====================================================================== -->
   <build>
+
     <plugins>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>process-test-resources</id>
+            <phase>process-test-resources</phase>
+            <configuration>
+              <target>
+                <copy todir="${project.build.directory}/repository">
+                  <fileset dir="${basedir}/src/test/repository" />
+                </copy>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>ant</groupId>
+            <artifactId>ant-optional</artifactId>
+            <version>1.5.3-1</version>
+          </dependency>
+        </dependencies>
+        <version>1.6</version>
+      </plugin>
+
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
@@ -79,6 +108,18 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemProperties>
+            <property>
+              <name>org.apache.jackrabbit.repository.home</name>
+              <value>target/repository</value>
+            </property>
+          </systemProperties>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -138,6 +179,8 @@
       </exclusions>
     </dependency>
 
+
+    <!-- Test -->
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
@@ -145,7 +188,13 @@
       <!--<scope>test</scope>-->
     </dependency>
 
-    <!-- Test -->
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-jcr-tests</artifactId>
+      <version>${apache.jackrabbit.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -177,5 +226,6 @@
       http://svn.apache.org/viewvc/asf/jackrabbit/commons/ocm/trunk
     </url>
   </scm>
+
 
 </project>
