--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>derby.log</exclude>
+          </excludes>
+        </configuration>
       </plugin>
     </plugins>
   </build>
