OCM-61 fix doc location
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/commons/ocm/trunk@1358063 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     Java-based Criteria, as well as in JCR query language. It offers
     also features like version support and object locking.
   </description>
-  <url>http://http://jackrabbit.apache.org/object-content-mapping.html</url>
+  <url>http://jackrabbit.apache.org/object-content-mapping.html</url>
   <inceptionYear>2004</inceptionYear>
 
   <properties>
