--- a/pom.xml
+++ b/pom.xml
@@ -254,5 +254,18 @@
   </dependencies>
 
 
+  <distributionManagement>
+    <repository>
+      <id>internal</id>
+      <name>Internal Release Repository</name>
+      <url>http://mvn:8080/archiva/repository/internal/</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://mvn:8080/archiva/repository/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 
 </project>
